[tool.poetry]
name = "python-auth-api"
version = "0.1.0"
description = "An example project for python API best practices with FastAPI"
authors = ["Kieran Wynn"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
